--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
             <div class="audience">
                 
                 <div class="content-customer-support"> 
-                    <span class="text">Soporte al cliente</span> 
+                    <i class="fa-brands fa-whatsapp" style="color: #387046;"></i>
+                    <span class="text">Soporte al cliente</span>
             
                 </div>
             </div>
             <div class="container-logo">
-                <i class="fa-regular fa-face-smile-wink" style="color: #923a82;"></i> 
-                <h1 class="logo"><a href="/"></a> <span style="color: #923a82; font-size: 5.3rem; font-family: serif" >Skincare</span></a></h1> 
+                <i class="fa-regular fa-face-smile-wink" style="color: #a12c5d;"></i> 
+                <h1 class="logo"><a href="/"></a> <span style="color: #a12c5d; font-size: 5.3rem; font-family: serif" >Skincare</span></a></h1> 
             </div>
             <div class="container-user">
                 <div class="container-navbar">
@@ -45,5 +46,12 @@
             </div>
         </div>
     </header>
+
+    <section class="banner"section>
+        <div>class="content-banner"</div>
+        <P>cuidá tu piel</P>
+        <h2>Elegí los productos adecuados</h2>
+        <a href="#">Hacé click para mas información</a>
+        <img src="C:\Users\Lucia\Downloads\imgbanner.jpg" alt="imgbanner">
 </body>
 </html>
