--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="container-logo">
                 <i class="fa-regular fa-face-smile-wink" style="color: #a12c5d;"></i> 
-                <h1 class="logo"><a href="/"></a> <span style="color: #a12c5d; font-size: 5.3rem; font-family: serif" >Skincare</span></a></h1> 
+                <h1 class="logo"><a href="/"><span style="color: #a12c5d; font-size: 5.3rem; font-family: serif" >Skincare</span></a></h1> 
             </div>
             <div class="container-user">
                 <div class="container-navbar">
@@ -39,19 +39,18 @@
                             <input type="search" placeholder="Buscar..."/>
                             <button class="mi-clase">Buscar</button>
                                
-                            </button>
                         </form>
                     </nav>
                 </div>
             </div>
         </div>
     </header>
-
-    <section class="banner"section>
-        <div>class="content-banner"</div>
-        <P>cuidá tu piel</P>
-        <h2>Elegí los productos adecuados</h2>
+    <span class="banner"></span>
         <a href="#">Hacé click para mas información</a>
+    <section>
+        <h2>Conocé nuestros productos</h2>
         <img src="C:\Users\Lucia\Downloads\imgbanner.jpg" alt="imgbanner">
+    </section>
+        
 </body>
 </html>
