--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </div>
             </div>
             <div class="container-logo">
-                <i class="fa-regular fa-face-smile-wink" style="color: #a12c5d;"></i> 
-                <h1 class="logo"><a href="/"><span style="color: #a12c5d; font-size: 5.3rem; font-family: serif" >Skincare</span></a></h1> 
+                <i class="fa-regular fa-face-smile-wink" style="color: #d8538a;"></i> 
+                <h1 class="logo"><a href="/"><span style="color: #d8538a; font-size: 5.3rem; font-family: serif" >Skincare</span></a></h1> 
             </div>
             <div class="container-user">
                 <div class="container-navbar">
@@ -49,8 +49,8 @@
         <a href="#">Hacé click para mas información</a>
     <section>
         <h2>Conocé nuestros productos</h2>
-        <img src="C:\Users\Lucia\Downloads\imgbanner.jpg" alt="imgbanner">
+        <img src="C:\Users\Lucia\Downloads\imagebanner1.jpg" alt="imgbanner">
     </section>
-    <span class="banner"></span>
+    <div class="banner"></div>
 </body>
 </html>
