--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                             <li><a href="#">Más</a></li>
                         </ul>
                         <form class="search-form">
-                            <input type="search" placeholder="Buscar..."/>
+                            <input type="search" placeholder="Search..."/>
                             <button class="mi-clase">Buscar</button>
+                            <i class="fa-solid fa-magnifying-glass fa-fade" style="color: #ad3480;"></i>
                                
                         </form>
                     </nav>
