--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </div>
             </div>
             <div class="container-logo">
-                <i class="fa-regular fa-face-smile-wink" style="color: #d8538a;"></i> 
-                <h1 class="logo"><a href="/"><span style="color: #d8538a; font-size: 5.3rem; font-family: serif" >Skincare</span></a></h1> 
+                <i class="fa-regular fa-face-smile-wink" style="color: #b91763ea;"></i> 
+                <h1 class="logo"><a href="/"><span style="color: #b91763ea; font-size: 5.3rem; font-family: serif" >Skincare</span></a></h1> 
             </div>
             <div class="container-user">
                 <div class="container-navbar">
