ultimo cambio 1419hs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="container-logo">
                 <i class="fa-regular fa-face-smile-wink" style="color: #b91763ea;"></i> 
-                <h1 class="logo"><a href="/"><span style="color: #b91763ea; font-size: 5.3rem; font-family: serif" >Skincare</span></a></h1> 
+                <h1 class="logo"><a href="/"><span style="color: #b91763ea; font-size: 5.3rem; font-family: serif" >Skinglow</span></a></h1> 
             </div>
             <div class="container-user">
                 <div class="container-navbar">
@@ -49,8 +49,10 @@
     
         <a href="#">Hacé click para mas información</a>
     <section>
-        <h2>Conocé nuestros productos</h2>
+        <div class="text-banner">
         <img src="C:\Users\Lucia\Downloads\imagebanner1.jpg" alt="imgbanner">
+        <h2 style="position: absolute; top: 55%; left: 10%; transform: translate(-10%, -50%); color: #e46f6fd2; font-family: segoe script; font-size: 35px; font-weight: 200; line-height: 1.2;">Conocé nuestros<br>productos...</h2>
+    </div>
     </section>
     <div class="banner"></div>
 </body>
