--- a/index.html
+++ b/index.html
@@ -53,9 +53,69 @@
     <section>
         <div class="text-banner">
         <img src="C:\Users\Lucia\Downloads\imagebanner1.jpg" alt="imgbanner">
-        <h2 style="position: absolute; top: 55%; left: 10%; transform: translate(-10%, -50%); color: #e46f6fd2; font-family: segoe script; font-size: 35px; font-weight: 200; line-height: 1.2;">Conocé nuestros<br>productos...</h2>
+        <h2 style="position: absolute; top: 58%; left: 10%; transform: translate(-10%, -50%); color: #e46f6fd2; font-family: segoe script; font-size: 35px; font-weight: 200; line-height: 1.2;">Conocé nuestros<br>productos...</h2>
     </div>
     </section>
     <div class="banner"></div>
+
+    <main class="main-content">
+    <section class="container best-brands">
+        <h1 class="heading-1">Los mas buscados</h1>
+        <div class="card-category category-serums">
+            <p>Serum</p>
+            <span>Ver más</span>
+         </div>
+         <div class="card-category category-hidratantes">
+            <p>Hidratantes/p>
+            <span>Ver más</span>
+         </div>
+         <div class="card-category solares-">
+            <p>Solares</p>
+            <span>Ver más</span>
+         </div>
+
+
+        </div>
+
+    </section>
+
+    <section class="container best-brands">
+        <h1 class="heading-1">Mejores productos</h1>
+
+       <div class="container-options"></div>
+       <span class="active">Destacados</span>
+       <span>Recomendados</span>
+       <span>Nuevos</span>
+       
+
+        <div class="container-products">
+            <div class="card-product">
+            <div class="container-img">
+                <img src="https://i.imgur.com/sftu6km.jpg" alt="products"/>
+                <span class="more">Ver más</span>
+                <div class="button-group">
+                    <span>
+
+                    </span>
+                    <i class="fa-solid fa-heart" style="color: #a71616;"></i>
+                    <span>
+
+                    </span>
+                    <i class="fa-regular fa-cart-shopping" style="color: #542141;"></i>
+                    <span>
+
+
+                    </span>
+            </div>
+            </div>
+
+            <div class="content-card-product">
+
+            </div>
+
+        </div>
+
+    </section>
+</main>
 </body>
 </html>
