--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     <section class="container best-brands">
         <h1 class="heading-1">Los mas buscados</h1>
         <div class="card-category category-serums">
-            <p>Serum</p>
+            <p>Serums</p>
             <span>Ver más</span>
          </div>
          <div class="card-category category-hidratantes">
-            <p>Hidratantes/p>
+            <p>Hidratantes</p>
             <span>Ver más</span>
          </div>
-         <div class="card-category solares-">
+         <div class="card-category category-solares">
             <p>Solares</p>
             <span>Ver más</span>
          </div>
@@ -91,7 +91,7 @@
         <div class="container-products">
             <div class="card-product">
             <div class="container-img">
-                <img src="https://i.imgur.com/sftu6km.jpg" alt="products"/>
+               
                 <span class="more">Ver más</span>
                 <div class="button-group">
                     <span>
@@ -101,7 +101,7 @@
                     <span>
 
                     </span>
-                    <i class="fa-regular fa-cart-shopping" style="color: #542141;"></i>
+                    <i class="fa-solid fa-basket-shopping"></i>
                     <span>
 
 
