--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="container best-brands">
         <h1 class="heading-1">Los mas buscados</h1>
         <div class="card-category category-serums">
-            <p>Serums</p>
+            <p>Serum</p>
             <span>Ver más</span>
          </div>
          <div class="card-category category-hidratantes">
