--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
     <main class="main-content">
     <section class="container best-brands">
-        <h1 class="heading-1">Los mas buscados</h1>
+        <h1 class="heading-1">Mejores productos</h1>
         <div class="card-category category-serums">
-            <p>Serum</p>
+            <p>Serums</p>
             <span>Ver más</span>
          </div>
          <div class="card-category category-hidratantes">
@@ -80,7 +80,7 @@
     </section>
 
     <section class="container best-brands">
-        <h1 class="heading-1">Mejores productos</h1>
+        <h1 class="heading-1">Te puede interesar...</h1>
 
        <div class="container-options"></div>
        <span class="active">Destacados</span>
