--- a/index.html
+++ b/index.html
@@ -62,14 +62,20 @@
     <section class="container best-brands">
         <h1 class="heading-1">Mejores productos</h1>
         <div class="card-category category-serums">
+            <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
+            <i class="fa-solid fa-basket-shopping icono basket"></i>
             <p>Serums</p>
             <span>Ver más</span>
          </div>
          <div class="card-category category-hidratantes">
+        <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
+        <i class="fa-solid fa-basket-shopping icono basket"></i>
             <p>Hidratantes</p>
             <span>Ver más</span>
          </div>
          <div class="card-category category-solares">
+        <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
+        <i class="fa-solid fa-basket-shopping icono basket"></i>
             <p>Solares</p>
             <span>Ver más</span>
          </div>
@@ -94,18 +100,6 @@
                
                 <span class="more">Ver más</span>
                 <div class="button-group">
-                    <span>
-
-                    </span>
-                    <i class="fa-solid fa-heart" style="color: #a71616;"></i>
-                    <span>
-
-                    </span>
-                    <i class="fa-solid fa-basket-shopping"></i>
-                    <span>
-
-
-                    </span>
             </div>
             </div>
 
