--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         
     <section>
         <div class="text-banner">
-        <img src="C:\Users\Lucia\Downloads\imagebanner1.jpg" alt="imgbanner">
+            <img src="imagebanner1.jpg" alt="imgbanner">
+
         <h2 style="position: absolute; top: 58%; left: 10%; transform: translate(-10%, -50%); color: #e46f6fd2; font-family: segoe script; font-size: 35px; font-weight: 200; line-height: 1.2;">Conocé nuestros<br>productos...</h2>
     </div>
     </section>
