last changes buttons footer

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
     <section class="container best-brands">
         <h1 class="heading-1">Te puede interesar...</h1>
 
-       <div class="container-options"></div>
+       <div class="container-options">
        <span class="active">Destacados</span>
        <span>Recomendados</span>
-       <span>Nuevos</span>
-       
-
+       <span>Nuevos</span>  
+    </div>
+</section>
         <div class="container-products">
             <div class="card-product">
             <div class="container-img">
