cambio de contenido

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><a href="#">Hidratantes</a></li>
                             <li><a href="#">Tónicos</a></li>
                             <li><a href="#">Protectores</a></li>
-                            <li><a href="#">Más</a></li>
+                            <li><a href="#">Extra</a></li>
                         </ul>
                         <form class="search-form">
                             <input type="search" placeholder="Search..."/>
@@ -60,24 +60,24 @@
 
     <main class="main-content">
     <section class="container best-brands">
-        <h1 class="heading-1">Mejores productos</h1>
+        <h1 class="heading-1">Los mas buscados</h1>
         <div class="card-category category-serums">
             <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
             <i class="fa-solid fa-basket-shopping icono basket"></i>
             <p>Serums</p>
-            <span>Ver más</span>
+            <span>Descubrí</span>
          </div>
          <div class="card-category category-hidratantes">
         <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
         <i class="fa-solid fa-basket-shopping icono basket"></i>
             <p>Hidratantes</p>
-            <span>Ver más</span>
+            <span>Descubrí</span>
          </div>
          <div class="card-category category-solares">
         <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
         <i class="fa-solid fa-basket-shopping icono basket"></i>
             <p>Solares</p>
-            <span>Ver más</span>
+            <span>Descubrí</span>
          </div>
 
 
