--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
         <h1 class="heading-1">Los mas buscados</h1>
         <div class="card-category category-serums">
             <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
-            <i class="fa-solid fa-basket-shopping icono basket"></i>
+            <i class="fa-solid fa-basket-shopping icono basket" style="color: #fff";></i>
             <p>Serums</p>
             <span>Descubrí</span>
          </div>
          <div class="card-category category-hidratantes">
         <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
-        <i class="fa-solid fa-basket-shopping icono basket"></i>
+        <i class="fa-solid fa-basket-shopping icono basket" style="color: #fff;"></i>
             <p>Hidratantes</p>
             <span>Descubrí</span>
          </div>
          <div class="card-category category-solares">
         <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
-        <i class="fa-solid fa-basket-shopping icono basket"></i>
+        <i class="fa-solid fa-basket-shopping icono basket" style="color: #fff;"></i>
             <p>Solares</p>
             <span>Descubrí</span>
          </div>
