--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </section>
 
     <section class="container best-brands">
-        <h1 class="heading-1">Te puede interesar...</h1>
+        <h1 class="heading-1">¡Te puede interesar!</h1>
 
        <div class="container-options">
        <span class="active">Destacados</span>
