--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
                 <div class="container-navbar">
                     <nav class="navbar container">
                         
-<input type="radio" id="menu-abierto" name="menu" hidden>
-<input type="radio" id="menu-cerrado" name="menu" hidden checked>
-<label for="menu-abierto" class="btn-menu">
+<input type="radio" id="menu-opened" name="menu" hidden>
+<input type="radio" id="menu-closed" name="menu" hidden checked>
+<label for="menu-opened" class="btn-menu">
   <i class="fa-solid fa-bars-staggered"></i>
 </label>
 
 <div class="menu-lateral">
-  <label for="menu-cerrado" class="btn-cerrar">
+  <label for="menu-closed" class="btn-close">
     <i class="fa-solid fa-xmark"></i>
   </label>
 
   <nav>
-    <label for="menu-cerrado"><a href="#">Maquillaje</a></label>
-    <label for="menu-cerrado"><a href="#">Fragancias</a></label>
-    <label for="menu-cerrado"><a href="#">Accesorios</a></label>
-    <label for="menu-cerrado"><a href="#">Favoritos</a></label>
-    <label for="menu-cerrado"><a href="#">Mi cuenta</a></label>
-    <label for="menu-cerrado"><a href="#">Contacto</a></label>
+    <label for="menu-closed"><a href="#">Maquillaje</a></label>
+    <label for="menu-closed"><a href="#">Fragancias</a></label>
+    <label for="menu-closed"><a href="#">Accesorios</a></label>
+    <label for="menu-closed"><a href="#">Favoritos</a></label>
+    <label for="menu-closed"><a href="#">Mi cuenta</a></label>
+    <label for="menu-closed"><a href="#">Contacto</a></label>
   </nav>
 </div>                     
                         <ul class="menu">
