--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
   </nav>
 </div>                     
                         <ul class="menu">
-                            <li><a href="#">Inicio</a></li>
-                            <li><a href="#">Serums</a></li>
-                            <li><a href="#">Hidratantes</a></li>
-                            <li><a href="#">Tónicos</a></li>
-                            <li><a href="#">Protectores</a></li>
-                            <li><a href="#">Extra</a></li>
+                            <li><a href="#inicio">Inicio</a></li>
+                            <li><a href="#serums">Serums</a></li>
+                            <li><a href="#hidratantes">Hidratantes</a></li>
+                            <li><a href="#protectores">Protectores</a></li>
+                            <li><a href="#extra">Extra</a></li>
                         </ul>
                         <form class="search-form">
                             <input type="search" placeholder="Search..."/>
@@ -81,7 +80,7 @@
     <div class="banner"></div>
 
     <main class="main-content">
-    <section class="container best-brands">
+    <section id="serums" class="container best-brands">
         <h1 class="heading-1">Los mas buscados</h1>
         <div class="card-category category-serums">
             <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
@@ -89,19 +88,28 @@
             <p>Serums</p>
             <span>Descubrí</span>
          </div>
+
+         <section id="hidratantes" class="container best-brands">
          <div class="card-category category-hidratantes">
         <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
         <i class="fa-solid fa-basket-shopping icono basket" style="color: #fff;"></i>
             <p>Hidratantes</p>
             <span>Descubrí</span>
          </div>
+
+         <section id="protectores" class="container best-brands">
          <div class="card-category category-solares">
         <i class="fa-solid fa-heart icono heart" style="color: #550000;"></i>
         <i class="fa-solid fa-basket-shopping icono basket" style="color: #fff;"></i>
             <p>Solares</p>
             <span>Descubrí</span>
          </div>
+        </section>
 
+        <section id="extra" class="container best-brands">
+            <div class="container-options">
+            </div>
+        </section>
 
         </div>
 
