--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 
                 <div class="content-customer-support"> 
                     <i class="fa-brands fa-whatsapp" style="color: #387046;"></i>
-                    <span class="text">Soporte al cliente</span>
+                    <span class="text">Soporte al cliente:+542914676677</span>
             
                 </div>
             </div>
