--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@
             <img src="https://blog.stocksnap.io/content/images/2022/01/image-41.jpeg" alt="img5">
         </li>
         
-    </ul>
+</ul>
 </div>
+</section>
     <section id="contacto" class="container my-5">
         <h2 class="text-center mb-4">Contacto</h2>
         <form>
